# proyecto_practicas

./: README.md
calibration/: CMakeLists.txt  confighandeye_result.npz  package.xml
calibration/config/: camera_calibration.npz  camera_final_calibration.npz  handeye_calibration.yaml  handeye_result.npz
calibration/launch/: camera_calibration.launch  kinova_handeye.launch
calibration/scripts/: calibration_d415.py  camera_results_d415.py  evaluacion.py  hand_eye_calibration.py  handeye_matrix_node.py
sam_segmentation/: CMakeLists.txt  package.xml
sam_segmentation/launch/: prueba_segmentation.launch  segmentation_bowl.launch  segmentation_thread.launch  simulation_move_nodes.launch  simulation_parameter_nodes.launch  vision_position_robot.launch
sam_segmentation/scripts/: clasesYOLOv8n.txt  segmentation_bowl.py  segmentation_sam3.py  transformer_node.py  vision_node.py
sam_segmentation/scripts/gazebo_simulation/: mover_brazo.py  (+2 more)
sim_kinova/: CMakeLists.txt  commands.txt  package.xml
sim_kinova/config/: aruco_data.csv  aruco_detections_20260331_211445.csv  camera_calibration.npz  camera_final_calibration.npz  handeye_calibration.yaml  handeye_result.npz
sim_kinova/launch/: fingers_tutorial.launch  gazebo_kinova_sim.launch  moveit_config_simulation.rviz  moveit_rviz_simulation.launch  rviz_kinova_sim.launch  sim_kinova_moveit.launch  spawn_simulate_gazebo.launch  spawn_world.launch  tutorial_moveit.launch
sim_kinova/worlds/: world_table_aruco.world  world_table_bowl.world  world_table_bowl_with_apple.world  world_table_chessboard.world
(+13 files in other folders)
